<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_title_bg" >

        <ImageView
            android:id="@+id/pay_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="8dip"
            android:src="@drawable/back_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/checkstand"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pay_money_real_name_auth_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@color/white"
        android:padding="8dip" >

        <ImageView
            android:id="@+id/pay_money_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:src="@drawable/pay" />

        <TextView
            android:id="@+id/pay_money_tag_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/pay_money_iv"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/please_pay"
            android:textColor="@color/black_character"
            android:textSize="@dimen/middle_text_size" />

        <TextView
            android:id="@+id/pay_money_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:textColor="@color/red_character"
            android:textSize="@dimen/middle_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/please_select_way"
            android:textColor="@color/black_character"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/pay_online_brief"
            android:textColor="@color/gray_character"
            android:textSize="@dimen/small_text_size"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pay_alipay_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@drawable/common_selector"
        android:padding="8dip" >

        <ImageView
            android:id="@+id/pay_alipay_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:src="@drawable/pay_alipay" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@+id/pay_alipay_iv"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alipay"
                android:textColor="@color/black_character"
                android:textSize="@dimen/middle_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/alipay_hint"
                android:textColor="@color/black_character"
                android:textSize="@dimen/micro_text_size" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/pay_alipay_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@null"
            android:button="@drawable/check_selector"
            android:focusable="false"
            android:gravity="center" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:background="@drawable/h_line"
        android:orientation="vertical"
        android:visibility="gone" >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pay_wechat_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_selector"
        android:padding="8dip"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/pay_wechat_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:src="@drawable/wechatpay" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@+id/pay_wechat_iv"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wechat"
                android:textColor="@color/black_character"
                android:textSize="@dimen/middle_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/alipay"
                android:textColor="@color/black_character"
                android:textSize="@dimen/micro_text_size" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/pay_wechat_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@null"
            android:button="@drawable/check_selector"
            android:focusable="false"
            android:gravity="center" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:background="@drawable/h_line"
        android:orientation="vertical" >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pay_unionpay_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_selector"
        android:padding="8dip" >

        <ImageView
            android:id="@+id/pay_unionpay_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:src="@drawable/pay_union" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@+id/pay_unionpay_iv"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unionpay"
                android:textColor="@color/black_character"
                android:textSize="@dimen/middle_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/unionpay_hint"
                android:textColor="@color/black_character"
                android:textSize="@dimen/micro_text_size" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/pay_unionpay_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@null"
            android:button="@drawable/check_selector"
            android:focusable="false"
            android:gravity="center" />
    </RelativeLayout>

    <Button
        android:id="@+id/pay_confirm_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/corners_bg_red_all"
        android:gravity="center"
        android:paddingBottom="8dip"
        android:paddingTop="8dip"
        android:text="@string/pay_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size" />

</LinearLayout>